<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/sharp_search_24"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/add"
        android:title="@string/newSwimsuit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/sharp_add_24"
        android:orderInCategory="80"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/sharp_logout_24"
        android:orderInCategory="100"/>

</menu>