<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="577dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        style="@style/item">

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:text="@string/price"
            android:textAlignment="viewEnd"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="30dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="78dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/name"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/image"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/details"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp">
            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="delete"
                android:text="@string/delete" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>