<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity"
    style="@style/background"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="40dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Price"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/sortPrice"
            android:textAlignment="viewEnd"
            tools:ignore="MissingConstraints"
            />
        <Spinner
            android:id="@+id/sortPrice"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-4dp"
            android:layout_marginStart="5dp"

            style="@style/item"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/limit"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/Price"

        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/limit"
            android:textAlignment="viewEnd"
            tools:ignore="MissingConstraints"
            />
        <Spinner
            android:id="@+id/limitItem"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="3"
            android:textSize="30sp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-4dp"
            style="@style/item"/>
    </LinearLayout>

    <Button
        android:id="@+id/filter"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:onClick="filter"
        android:text="@string/filter"
        app:layout_constraintTop_toBottomOf="@+id/limit"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="165dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/limit"
         />


</androidx.constraintlayout.widget.ConstraintLayout>